--- a/css/styles.css
+++ b/css/styles.css
@@ -16,12 +16,17 @@ footer{
     padding: 20px 0px; 
 }
 .jumbotron{
-     padding: 30px;
-     background-image: linear-gradient(to right, #5637DD, #3036C5, #60106B);
-     color:white;
+    margin:0;
+    padding: 30px;
+    background-image: linear-gradient(to right, #5637DD, #3036C5, #60106B);
+    color:white;
 }
 .row-content{
     padding: 50px 0;
     border-bottom: 1px ridge;
     min-height: 200px;
+}
+
+.navbar{
+    background-color: #901CAD;
 }
