--- a/css/styles.css
+++ b/css/styles.css
@@ -12,7 +12,7 @@ header h2{
     color: #CEC8FF;
 }
 footer{
-    background-image: linear-gradient(#CEC8FF, white);
+    /* background-image: linear-gradient(#CEC8FF, white); */
     padding: 20px 0px; 
 }
 .jumbotron{
@@ -31,7 +31,7 @@ footer{
     background-color: #901CAD;
 }
 .site-footer{
-    background-image: linear-gradient(#CEC8FF, white);
+    /* background-image: linear-gradient(#CEC8FF, white); */
     padding: 20px 0;
 }
 .tab-content{
