--- a/css/styles.scss
+++ b/css/styles.scss
@@ -1,10 +1,3 @@
-$color-primary: #3046C5;
-$color-secondary: #5637dd;
-$color-pale: #CEC8FF;
-$color-mid: #901CAD;
-$color-dark: #60106b;
-$color-black-transparent: rgba(0, 0, 0, 0.5);
-
 $body-font: "Open Sans", sans-serif;
 $header-font: "Lobster", cursive;
 
@@ -12,9 +5,6 @@ body{
     font-family: $body-font;
 }
 
-h1,h2,h3 {
-    font-family: $header-font;
-}
 h2{
     color: $color-primary;
 }
@@ -24,14 +14,11 @@ header {
 }
 }
 footer{
-    background-image: linear-gradient($color-pale, white);
     padding: 20px 0px; 
 }
 .jumbotron{
     margin:0;
     padding: 30px;
-    background-image: linear-gradient(to right, $color-secondary, $color-primary, $color-mid);
-    color:white;
 }
 .row-content{
     padding: 50px 0;
@@ -40,10 +27,9 @@ footer{
 }
 
 .navbar{
-    background-color: $color-mid;
+    background-color: black;
 }
 .site-footer{
-    background-image: linear-gradient($color-pale, white);
     padding: 20px 0;
 }
 .tab-content{
@@ -51,14 +37,6 @@ footer{
     border-top:none;
     padding: 10px;
 }
-.carousel-caption {
-    background-color: $color-black-transparent;
-}
-
-.carousel {
-    border: solid $color-secondary;
-}
-
 #carouselButton{
     position: absolute;
     right: 0;
