--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,7 @@
 body {
   font-family: "Open Sans", sans-serif; }
 
-h2 {
+h1 {
   font-weight: 700; }
 
 footer {
@@ -12,6 +12,7 @@ footer {
 
 .jumbotron{
   margin:0;
+  height: 20vh;
 }
 
 .row-content {
@@ -45,7 +46,7 @@ footer {
     position: relative;
   }
 
-  .mid h2 {
+  .mid h1 {
     font-weight: 700;
     color: white;
     text-transform: uppercase;
@@ -53,6 +54,6 @@ footer {
     position: absolute;
     top: 50%;
     left: 50%;
-    font-size: 2rem;
     transform: translate(-50%, -50%);
+    text-shadow: 3px 3px 10px black;
   }
