--- a/css/styles.css
+++ b/css/styles.css
@@ -12,7 +12,6 @@ footer {
 
 .jumbotron{
   margin:0;
-  height: 20vh;
 }
 
 .row-content {
@@ -56,4 +55,6 @@ footer {
     left: 50%;
     transform: translate(-50%, -50%);
     text-shadow: 3px 3px 10px black;
+    font-size: 1.5em;
+    text-align: center;
   }
